# parquet-study

./: .gitignore  Cargo.toml  README.md  unscientific-thoughts.md
.cursor/rules/: coding.mdc
src/: metadata_cache.rs
